# flake8-useless-assert

./: README.md  build.py  build.sh  publish.sh  pyproject.toml
examples/: example00.py  example01.py
flake8_useless_assert/: __init__.py  patch_const.py  plugin.py  rules.py  useless_assert_visitor.py  visitors.py
