[tool.poetry]
name = "flake8-useless-assert"
version = "0.1.1"
description = "flake8 plugin to catch useless `assert` statements"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.plugins."flake8.extension"]
ULA = "flake8_useless_assert:UselessAssert"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


