[tool.poetry]
name = "flake8-useless-assert"
version = "0.2.0"
description = "flake8 plugin to catch useless `assert` statements"
authors = ["decorator-factory <decorator-factory@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.plugins."flake8.extension"]
ULA = "flake8_useless_assert:UselessAssert"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


