[tool.poetry]
name = "flake8-useless-assert"
version = "0.4.0"
description = "flake8 plugin to catch useless `assert` statements"
authors = ["decorator-factory <decorator-factory@yandex.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/decorator-factory/flake8-useless-assert"

[tool.poetry.dependencies]
python = "^3.7"
flake8 = ">=3.9,<5.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
toml = "^0.10.2"

[tool.poetry.plugins."flake8.extension"]
ULA = "flake8_useless_assert:UselessAssert"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


